Lightbox, scale model page validated
Fixed more lightbox issues.
Added lightbox to Scale Model page.
Ran scale model page through an HTML validator

--- a/html/scalemodel.html
+++ b/html/scalemodel.html
@@ -10,7 +10,7 @@
     <link href="../css/flexbox.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://use.typekit.net/zud4esk.css">
-    
+    <link rel="stylesheet" href="../css/glightbox.min.css">
   </head>
 
   <body>
@@ -55,9 +55,10 @@
             <p>This was a 3 person group project. Our diorama is an abandoned and overgrown graveyard scene, comprised 
                 of flocking, painted foam, and paper mache. It feature little glowing LED ghosts as a form of lighting. 
                 We chose this concept as we felt it allowed for a variety of colors, materials and general creativity 
-                without requiring excessive precision or being otherwise unrealistic to build.</a>.</p>
+                without requiring excessive precision or being otherwise unrealistic to build.</p>
 
-            <img src="../img/scale_model/3DScanTurnaround.gif">
+            <a class="glightbox" href="../img/scale_model/3DScanTurnaround.gif"><img src="../img/scale_model/3DScanTurnaround.gif" alt="A spinning 3d model of the finished scale model."></a>
+        </div>
       </section>
       <section id="process">
         <div class="section-left">
@@ -67,8 +68,8 @@
             <p>Before building anything, a rough model was quickly created in Blender. Though not used closely 
                 as a reference, this allowed us to evaluate and plan placement and scale, especially in height.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/Moodboard.png" alt="The first iteration of the app's appearance.">
-                <img class="two-img" src="../img/scale_model/modelconcept.png" alt="The second iteration of the app's appearance. ">
+                <a class="two-img glightbox" href="../img/scale_model/Moodboard.png"><img src="../img/scale_model/Moodboard.png" alt="A moodboard with pictures of a graveyard and a church."></a>
+                <a class="two-img glightbox" href="../img/scale_model/modelconcept.png"><img src="../img/scale_model/modelconcept.png" alt="A low poly render of our model."></a>
             </div>
             <p>Using techniques we learned in class, stone structures were created out of dry floral foam with indentations
                  made with a pen, and additional texture added using tinfoil. Small pieces of thin plastic were used as windows,
@@ -80,27 +81,27 @@
                 wire and splitting pieces off to create branches, where flocking was glued on. The early iterations 
                 were too tall and not full enough, so we shortened them and created more low branches.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/church.png" alt="The first iteration of the app's appearance.">
-                <img class="two-img" src="../img/scale_model/tree.png" alt="The second iteration of the app's appearance. ">
+                <a class="two-img glightbox" href="../img/scale_model/church.png"><img src="../img/scale_model/church.png" alt="The church sculpted out of foam before being painted."></a>
+                <a class="two-img glightbox" href="../img/scale_model/tree.png"><img src="../img/scale_model/tree.png" alt="A sample tree made from wire, flocking, and glue."></a>
             </div>
             <p>The next step was to test the lighting feature and create a box to act as a base for the diorama and conseal the 
                 electroncis. The ghost lights were made using hot glue over white lEDs. We later used sharpie to add small eyes.</p>
             <p>We created the box using laser cut particle board. This required some planning because we needed to cut out holes for the ghosts.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/lights.png" alt="The second iteration of the app's appearance. ">
-                <img class="two-img" src="../img/scale_model/baseprint.png" alt="The first iteration of the app's appearance.">
+              <a class="two-img glightbox" href="../img/scale_model/lights.png"><img src="../img/scale_model/lights.png" alt="LED ghosts made with hot glue being tested on a breadboard."></a>
+              <a class="two-img glightbox" href="../img/scale_model/baseprint.png"><img src="../img/scale_model/baseprint.png" alt="The file we used to laser cut the base of our scale mode."></a>
             </div>
             <p>Once the base was cut out, we could begin assembling the hill for our graveyard. We used floral foam pieces 
                 to create a rough landscape, and then covered it with paper mache. This took a very long time to dry, so we 
                 attempted to speed up the process using a heat gun.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/foam.png" alt="The second iteration of the app's appearance. ">
-                <img class="two-img" src="../img/scale_model/heatgun.png" alt="The first iteration of the app's appearance.">
+              <a class="two-img glightbox" href="../img/scale_model/foam.png"><img src="../img/scale_model/foam.png" alt="A very rough landscape created with floral foam."></a>
+              <a class="two-img glightbox" href="../img/scale_model/heatgun.png"><img src="../img/scale_model/heatgun.png" alt="A heat gun being used to dry the paper mache."></a>
             </div>
             <p>All that was left was to paint and assemble. We painted the base, church, and gravestones. After everything was dry and glued into place on the base, we covered the grassy areas in flocking for a more realistic texture.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/painted church.jpg" alt="The second iteration of the app's appearance. ">
-                <img class="two-img" src="../img/scale_model/flocking.jpg" alt="The first iteration of the app's appearance.">
+              <a class="two-img glightbox" href="../img/scale_model/painted_church.jpg"><img src="../img/scale_model/painted_church.jpg" alt="The foam church after being painted."></a>
+              <a class="two-img glightbox" href="../img/scale_model/flocking.jpg"><img src="../img/scale_model/flocking.jpg" alt="The process of adding flocking to look like grass."></a>
             </div>
         </div>
       </section>
@@ -120,8 +121,8 @@
                 part of our plan, so we decided to extend the hillside using pieces of foam to hide the box. We made one side
                  of the hill removable so that we could have access to inside the box for the electronics.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/button.jpg" alt="The first iteration of the app's appearance.">
-                <img class="two-img" src="../img/scale_model/sides.png" alt="The second iteration of the app's appearance. ">
+              <a class="two-img glightbox" href="../img/scale_model/button.jpg"><img src="../img/scale_model/button.jpg" alt="Installing the button on foam to reach the right height."></a>
+              <a class="two-img glightbox" href="../img/scale_model/sides.png"><img src="../img/scale_model/sides.png" alt="Adding more foam sides to create a hill."></a>
             </div>
         </div>
       </section>
@@ -148,15 +149,15 @@
                      caused the foam to lift away from our base. This could be prevented by more securely glueing the foam, 
                      or by using a different material like chickenwire to create our hill shape.</li>
             </ul>
-            <img src="../img/scale_model/finished1.jpg">
+            <a class="glightbox" href="../img/scale_model/finished1.jpg"><img src="../img/scale_model/finished1.jpg" alt="The finished scale model."></a>
             <div class="two-img-box">
-                <img class="two-img" src="../img/scale_model/finished2.jpg" alt="The first iteration of the app's appearance.">
-                <img class="two-img" src="../img/scale_model/finished3.jpg" alt="The second iteration of the app's appearance. ">
+              <a class="two-img glightbox" href="../img/scale_model/finished2.jpg"><img src="../img/scale_model/finished2.jpg" alt="The finished scale model."></a>
+              <a class="two-img glightbox" href="../img/scale_model/finished3.jpg"><img src="../img/scale_model/finished3.jpg" alt="The finished scale model."></a>
             </div>
             <div class="box-wrap">
-                <img class="three-img" src="../img/scale_model/finished4.jpg">
-                <img class="three-img" src="../img/scale_model/finished5.jpg">
-                <img class="three-img" src="../img/scale_model/finished6.jpg">
+              <a class="three-img glightbox" href="../img/scale_model/finished4.jpg"><img src="../img/scale_model/finished4.jpg" alt="The finished scale model."></a>
+              <a class="three-img glightbox" href="../img/scale_model/finished5.jpg"><img src="../img/scale_model/finished5.jpg" alt="The finished scale model."></a>
+              <a class="three-img glightbox" href="../img/scale_model/finished6.jpg"><img src="../img/scale_model/finished6.jpg" alt="The finished scale model."></a>
             </div>
         </div>
       </section>
@@ -168,5 +169,10 @@
     <script  src="../js/script.js"></script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script><script  src="../js/script.js"></script>
+    <script src="../js/glightbox.min.js"></script>
+
+    <script type="text/javascript">
+      const lightbox = GLightbox({ loop:true });
+    </script>
   </body>
 </html>
