Added Resume to Nav
added resume button to nav
added alt attributes to images on DSBIA page.
validated DSBIA page.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="expanded">
           <ul>
             <li><a href="./index.html">Home</a></li>
+            <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -99,6 +100,20 @@
           <a href="./html/arcanamini2.html"><img class="img-border" src="./img/arcana_mini_2/Header-1x.jpg" srcset="./img/arcana_mini_2/Header-2x.jpg x2, ./img/arcana_mini_2/Header-3x.png x3" alt="Preview of Arcana Mini 2 mobile app."></a>
         </div>
       </section>
+      
+      <section>
+        <div class="section-left">
+          <a class="no-underline" href="./html/DSBIA.html"><h3>Downtown Surrey BIA Co-op</h3></a>
+          <p>Summer 2024</p>
+          <hr>
+          <p>Co-op</p>
+          <p>Graphic design, web design</p>
+        </div>
+        <div class="section-right">
+          <a href="./html/DSBIA.html"><img class="img-border" src="./img/DSBIA_img/DSBIAheader_1x.png" srcset="./img/DSBIA_img/DSBIAheader_2x.png 2x, ./img/DSBIA_img/DSBIAheader_3x.png 3x" alt="A header that shows the title of the page and a mosaic of some of the designs I made."></a>
+        </div>
+      </section>
+
       <section>
         <div class="section-left">
           <a class="no-underline" href="./html/portfolio2.html"><h3>Portfolio 2</h3></a>
