--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -28,6 +28,7 @@
         <div class="expanded">
           <ul>
             <li><a class="no-underline" href="../index.html">Home</a></li>
+            <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
