Wax dog lightbox
added lightbox to wax dog online page

--- a/html/waxdogonline.html
+++ b/html/waxdogonline.html
@@ -10,7 +10,7 @@
     <link href="../css/flexbox.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://use.typekit.net/zud4esk.css">
-    
+    <link rel="stylesheet" href="../css/glightbox.min.css">
   </head>
 
   <body>
@@ -70,8 +70,8 @@
                 target="_blank" rel="noopener noreferrer">http://waxdog.online/ →</a></p>
             
                 <div class="two-img-box">
-                  <img class="two-img" src="../img/waxdog/WAXDOGMockup1x1.png" srcset="../img/waxdog/WAXDOGMockup1x2.png 2x, ../img/waxdog/WAXDOGMockup1x3.png 3x" alt="Image of drumkit before colour correcting">
-                  <img class="two-img" src="../img/waxdog/WAXDOGMockup2x1.png" srcset="../img/waxdog/WAXDOGMockup2x2.png 2x, ../img/waxdog/WAXDOGMockup2x3.png 3x" alt="Image of drumkit after colour correcting">
+                  <a class="two-img glightbox" href="../img/waxdog/WAXDOGMockup1x1.png"><img src="../img/waxdog/WAXDOGMockup1x1.png" srcset="../img/waxdog/WAXDOGMockup1x2.png 2x, ../img/waxdog/WAXDOGMockup1x3.png 3x" alt="Image of drumkit before colour correcting"></a>
+                  <a class="two-img glightbox" href="../img/waxdog/WAXDOGMockup2x1.png"><img src="../img/waxdog/WAXDOGMockup2x1.png" srcset="../img/waxdog/WAXDOGMockup2x2.png 2x, ../img/waxdog/WAXDOGMockup2x3.png 3x" alt="Image of drumkit after colour correcting"></a>
                 </div>
         </div>
       </section>
@@ -82,15 +82,15 @@
         <div class="section-right">
             <p>To begin, I visited the studio for a photoshoot. I helped take photos of the various equipment in the studio using my Fujifilm X-Pro1. I later edited these photos in lightroom to improve their contrast and legibility. Below you can see an example of a picture before and after editing.</p>
             <div class="two-img-box">
-                <img class="two-img" src="../img/waxdog/drums-x1.JPG" srcset="../img/waxdog/drums-x2.jpg 2x, ../img/waxdog/drums-x3.jpg 3x" alt="Image of drumkit before colour correcting">
-                <img class="two-img" src="../img/waxdog/drums2-x1.JPG" srcset="../img/waxdog/drums2-x2.jpg 2x, ../img/waxdog/drums2-x3.jpg 3x" alt="Image of drumkit after colour correcting">
+              <a class="two-img glightbox" href="../img/waxdog/drums-x1.jpg"><img src="../img/waxdog/drums-x1.JPG" srcset="../img/waxdog/drums-x2.jpg 2x, ../img/waxdog/drums-x3.jpg 3x" alt="Image of drumkit before colour correcting"></a>
+              <a class="two-img glightbox" href="../img/waxdog/drums2-x1.JPG"><img src="../img/waxdog/drums2-x1.JPG" srcset="../img/waxdog/drums2-x2.jpg 2x, ../img/waxdog/drums2-x3.jpg 3x" alt="Image of drumkit after colour correcting"></a>
             </div>
             <p>Now that I had the images I wanted to use for the site, I began wireframing. One key thing here was that the client wanted a black website. This was new to me so I spent some time finding inspiration. The client also has a very strong visual sense of character which I wanted to include while maintaining simplicity. For this, I wanted to add a scrolling bar at the top to mimic a scrolling LED sign. I felt this was a simple element that added the fun character that this website needed.</p>
-            <img src="../img/waxdog/slider.gif" alt="A gif of the scrolling slider at the top of the site.">
+            <a class="glightbox" href="../img/waxdog/slider.gif"><img src="../img/waxdog/slider.gif" alt="A gif of the scrolling slider at the top of the site."></a>
             <p>As always, I spent extra time to make sure the site was fully responsive. It is really important to me that whatever I create remains accessible to all users regardless of what device they choose to access the website from. Below you can see some examples of how the site's content will reshuffle as the screen size changes.</p>
             <div class="two-img-box">
-              <img class="two-img" src="../img/waxdog/Responsive1.gif" alt="Screencapture of the site to show responsivity.">
-              <img class="two-img" src="../img/waxdog/Responsive2.gif"  alt="Screencapture of the site to show responsivity.">
+              <a class="two-img glightbox" href="../img/waxdog/Responsive1.gif"><img src="../img/waxdog/Responsive1.gif" alt="Screencapture of the site to show responsivity."></a>
+              <a class="two-img glightbox" href="../img/waxdog/Responsive2.gif" ><img src="../img/waxdog/Responsive2.gif"  alt="Screencapture of the site to show responsivity."></a>
           </div>
         </div>
       </section>
@@ -121,5 +121,10 @@
     <script  src="../js/script.js"></script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js'></script><script  src="../js/script.js"></script>
+    <script src="../js/glightbox.min.js"></script>
+
+    <script type="text/javascript">
+      const lightbox = GLightbox({ loop:true });
+    </script>
   </body>
 </html>
