--- a/html/DSBIA.html
+++ b/html/DSBIA.html
@@ -34,9 +34,9 @@
           </ul>
         </div>
 
-        <!-- <div class="condensed">
+        <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div> -->
+        </div>
       </div>
     </nav>
 
@@ -44,12 +44,13 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
-      <!-- <div id="menu-content" class="menu-content">
+      <div id="menu-content" class="menu-content">
         <ul>
           <li><a class="no-underline" href="../index.html">Home</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
-      </div> -->
+      </div>
        
       <section class="top-section">
         <img class="img-border" src="../img/DSBIA_img/DSBIAheader_1x.png" srcset="../img/DSBIA_img/DSBIAheader_2x.png 2x, ../img/DSBIA_img/DSBIAheader_3x.png 3x" alt="A header that shows the title of the page and a mosaic of some of the designs I made.">
