--- a/html/arcanamini2.html
+++ b/html/arcanamini2.html
@@ -33,9 +33,9 @@
           </ul>
         </div>
 
-        <!-- <div class="condensed">
+        <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div> -->
+        </div>
       </div>
     </nav>
 
@@ -43,12 +43,13 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
-      <!-- <div id="menu-content" class="menu-content">
+      <div id="menu-content" class="menu-content">
         <ul>
           <li><a class="no-underline" href="../index.html">Home</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
-      </div> -->
+      </div>
        
       <section class="top-section">
         <img class="img-border" src="../img/arcana_mini_2/Header-3x.png" srcset="../img/arcana_mini_2/Header-2x.jpg 2x, ../img/arcana_mini_2/Header-3x.png 3x" alt="A mockup showing two of the app's screens and a big title with the project name.">
