--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -30,9 +30,9 @@
           </ul>
         </div>
 
-        <!-- <div class="condensed">
+        <div class="condensed">
           <button id="menu-button" onclick="showMenu()">Menu</button>
-        </div> -->
+        </div>
       </div>
     </nav>
 
@@ -40,12 +40,13 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
     
     <div class="body-box">
-      <!-- <div id="menu-content" class="menu-content">
+      <div id="menu-content" class="menu-content">
         <ul>
           <li><a class="no-underline" href="../index.html">Home</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
-      </div> -->
+      </div>
        
       <section class="top-section">
         <img src="../img/portfolio2/Portfolio2Banner.png" alt="Several screens of the mobile project.">
