--- a/html/scalemodel.html
+++ b/html/scalemodel.html
@@ -33,6 +33,9 @@
           </ul>
         </div>
 
+        <div class="condensed">
+          <button id="menu-button" onclick="showMenu()">Menu</button>
+        </div>
       </div>
     </nav>
 
@@ -40,6 +43,14 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
     <div class="body-box">
+      <div id="menu-content" class="menu-content">
+        <ul>
+          <li><a class="no-underline" href="../index.html">Home</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
+        </ul>
+      </div>
+      
       <section class="top-section">
         <img src="../img/scale_model/scalemodelbanner.jpg"  alt="A mockup showing two of the app's screens and a big title with the project name.">
         <div class="project-title">
