Finished Sound Synthesis
Added banner image
Added page to archive list

--- a/html/archive.html
+++ b/html/archive.html
@@ -65,6 +65,12 @@
             <img class="img-border" src="../img/DSBIA_img/DSBIAheader_1x.png"> 
             <div class="line"></div>
           </div>
+          <div class="project-title gallery-option-item" onclick="location.href='../html/soundsynthesis.html';">
+            <h3>Sound Synthesis</h3>
+            <p>Spring 2024</p>
+            <img src="../img/MaxPatchImg/MaxPatchBanner.jpg"> 
+            <div class="line"></div>
+          </div>
           <div class="project-title gallery-option-item" onclick="location.href='../html/arcanamini2.html';">
             <h3>Arcana Mini 2</h3>
             <p>Fall 2023 - Spring 2024</p>
