--- a/html/soundsynthesis.html
+++ b/html/soundsynthesis.html
@@ -52,7 +52,7 @@
       </div>
        
       <section class="top-section">
-        <img class="img-border" src="../img/arcana_mini_2/Header-3x.png" srcset="../img/arcana_mini_2/Header-2x.jpg 2x, ../img/arcana_mini_2/Header-3x.png 3x" alt="A mockup showing two of the app's screens and a big title with the project name.">
+        <img src="../img/MaxPatchImg/MaxPatchBanner.jpg" alt="A banner with the project title.">
         <div class="project-title">
           <h2>Sound Synthesis</h2>
           <h4>Spring 2024</h4>
